--- a/k8s/apps/backend.yaml
+++ b/k8s/apps/backend.yaml
@@ -1,25 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: backend-script
-data:
-  server.py: |
-    from http.server import BaseHTTPRequestHandler, HTTPServer
-    import json
-
-    class Handler(BaseHTTPRequestHandler):
-        def do_GET(self):
-            self.send_response(200)
-            self.send_header('Content-type', 'application/json')
-            self.end_headers()
-            response = {"message": "Hello from Backend!", "service": "backend"}
-            self.wfile.write(json.dumps(response).encode('utf-8'))
-
-    server_address = ('', 8080)
-    httpd = HTTPServer(server_address, Handler)
-    print("Backend running on port 8080...")
-    httpd.serve_forever()
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,17 +16,9 @@ spec:
     spec:
       containers:
       - name: backend
-        image: python:alpine
-        command: ["python3", "/app/server.py"]
+        image: rakeshragipani/backend:v1 # Update this to your registry/image name
         ports:
         - containerPort: 8080
-        volumeMounts:
-        - name: script-volume
-          mountPath: /app
-      volumes:
-      - name: script-volume
-        configMap:
-          name: backend-script
 ---
 apiVersion: v1
 kind: Service
