--- a/k8s/apps/frontend.yaml
+++ b/k8s/apps/frontend.yaml
@@ -1,43 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: frontend-script
-data:
-  server.py: |
-    from http.server import BaseHTTPRequestHandler, HTTPServer
-    import urllib.request
-    import json
-
-    class Handler(BaseHTTPRequestHandler):
-        def do_GET(self):
-            self.send_response(200)
-            self.send_header('Content-type', 'application/json')
-            self.end_headers()
-            
-            try:
-                # Internal call to backend service
-                with urllib.request.urlopen("http://backend") as response:
-                    backend_data = json.loads(response.read().decode('utf-8'))
-                
-                result = {
-                    "message": "Hello from Frontend!", 
-                    "service": "frontend",
-                    "upstream_response": backend_data
-                }
-            except Exception as e:
-                result = {
-                    "message": "Hello from Frontend!",
-                    "service": "frontend",
-                    "upstream_error": str(e)
-                }
-            
-            self.wfile.write(json.dumps(result).encode('utf-8'))
-
-    server_address = ('', 8080)
-    httpd = HTTPServer(server_address, Handler)
-    print("Frontend running on port 8080...")
-    httpd.serve_forever()
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -56,17 +16,12 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: python:alpine
-        command: ["python3", "/app/server.py"]
+        image: rakeshragipani/frontend:v1 # Update this to your registry/image name
         ports:
         - containerPort: 8080
-        volumeMounts:
-        - name: script-volume
-          mountPath: /app
-      volumes:
-      - name: script-volume
-        configMap:
-          name: frontend-script
+        env:
+        - name: BACKEND_URL
+          value: "http://backend"
 ---
 apiVersion: v1
 kind: Service
